# Spectrum

./: .gitattributes  .gitignore  .npmignore  Agentmanual.md  Agents.md  BENCHMARK_LOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM_MANUAL.md  EXTERNAL_CODEBASE_BENCHMARK.md  LICENSE  LOCAL_CHANGES_NOTE.md  MOS.txt  NOTICE  PROGRESS.md  PROJECT_OUTLINE.md  RAG_RANKING_TODO.md  RAG_STORAGE_BENCHMARK.md  README.md  RELEASE_CHECKLIST.md  RETRIEVAL_ENCODING_FLOW.md  RETRIEVAL_POSITIONING.md  SECURITY.md  SPECTRUM_AGENT_BRIEF.md  SPEC_PACK_ENCRYPTION_PLAN.md  make_snapshot.py  package.json  pyproject.toml
CLI Tool/: README.md  package.json
MCP/: README.md  pyproject.toml
MCP/spectrum_spec_mcp/: __init__.py  core.py  server.py
archive/: .gitignore  bridge-plan.md  portableproject.md
benchmark_hud/: README.md  app.js  index.html  launch-mac.command  launch-windows.ps1  server.py  styles.css
benchmarks/: IMPROVEMENTS.md  PRODUCTION_ENGINE_BENCHMARKS.md  README.md
demo/: README.md  __init__.py  run_demo.py
docs/: ecosystem_architecture.md  generate_spectrum_process_pdf.py  portable-specpack-runtime-plan.md  quickstart.md  specpack-app-runtime-plan.md  why-spectrum.md
installer/: SpectrumHub.iss
rag/: codebase_benchmark.py  indexer.py  native_decoder.py  normalization.py  normalization_audit.py  parameter_sweep.py  production_benchmark.py  ranking_eval.py  spectrum_only_benchmark_suite.py  spectrum_only_experiment.md  spectrum_serving.py  storage_benchmark.py
scripts/: build-hub-gui-exe.ps1  build-hub-gui-installer.ps1  build-hub-gui-macos.sh  (+7 more)
(+89 files in other folders)
